# ships

./: .clang-format  .clang-tidy  CMakeLists.txt
.cache/clangd/index/: GamePhase.h.50339B3C0EC62A9C.idx  GameState.h.DE7A1F3AD38B4D5B.idx  Vec2i.h.D8098569546E92CF.idx  curses_renderer.c.298607BB8C943CB2.idx  curses_renderer.h.D4323445BD549CF8.idx  intent.c.C17B7A59A21A4026.idx  main.c.48A6C50457257DDD.idx  renderer.h.6F7E76EE4D182219.idx  vec2.h.AF96DF5E477EF4EC.idx
.devcontainer/: Dockerfile  devcontainer.json
apps/client/: CMakeLists.txt
apps/client/src/: main.c
apps/host/: CMakeLists.txt
apps/host/src/: main.c
libs/: CMakeLists.txt
libs/app/: CMakeLists.txt
libs/app/include/app/: intent.h  net.h
libs/core/include/core/: GamePhase.h  Vec2i.h  constants.h  types.h
libs/core/include/core/phases/: phase_setup.h
libs/render/: CMakeLists.txt
libs/render/backends/: CMakeLists.txt
libs/render/backends/curses_renderer/: CMakeLists.txt
libs/render/backends/print_renderer/: CMakeLists.txt
libs/render/backends/print_renderer/include/print_renderer/: renderer.h
libs/utils/: CMakeLists.txt
libs/utils/include/utils/: vec2.h
src/: CMakeLists.txt  main.c
src/app/: CMakeLists.txt  intent.c  intent.h
src/core/: CMakeLists.txt  GamePhase.h  GameState.h  Vec2i.h
src/core/include/core/: GameState.h  Player.h  Ship.h
src/core/include/core/phases/: phase_play.h  phase_start_menu.h
src/curses-render/: CMakeLists.txt  curses_renderer.c  curses_renderer.h
src/curses_renderer/: CMakeLists.txt  renderer.c
src/curses_renderer/include/curses_renderer/: renderer.h
src/print_renderer/: CMakeLists.txt  renderer.c
src/render/: CMakeLists.txt  renderer.h
src/render/include/render/: renderer.h
src/utils/: CMakeLists.txt  span.h  vec2.h  vec3.h
src/utils/include/utils/: da.h  span.h
